# hls_googletest

./: CMakeLists.txt
HlsLib/include/ac_math/ac_math/: ac_sqrt_pwl.h
HlsLib/include/ac_types/: ac_sync.h
Main/: bit_accuracy.hpp  main.cpp  thread_demo.hpp  thread_lock.hpp  thread_sum.hpp
UnitTest/: CMakeLists.txt  macroTest.cpp  main.cpp
UnitTest/googletest/: CMakeLists.txt
